# HRInterviewing-VoiceAgent

./: README.md  ResuAi_combined.py  Shortlisting agent via Ollama.py  candidates.csv  pyproject.toml  read_me_Voice_Agent.md  read_me_shortlisting_agent.md  resuAi_combined_read_me.md  voice_agent.py
