[project]
name = "voiceagent-p2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "faster-whisper>=1.2.1",
    "fitz>=0.0.1.dev2",
    "ollama>=0.6.2",
    "sounddevice>=0.5.5",
    "streamlit>=1.58.0",
    "streamlit-aggrid>=1.2.1.post2",
]
